--- a/home.css
+++ b/home.css
@@ -146,3 +146,10 @@ footer {
     font-size: 0.9rem;
   }
 }
+.login-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 2rem;
+}
+
