--- a/home.css
+++ b/home.css
@@ -1,3 +1,4 @@
+
 /* Reset e base */
 * {
   margin: 0;
@@ -17,8 +18,7 @@ body {
 /* Cabeçalho */
 header {
   display: flex;
-  flex-direction: column;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
   padding: 1rem 2rem;
   background: linear-gradient(to right, #1E1F5F, #EA8C2D);
@@ -28,6 +28,7 @@ header {
 
 header h1 {
   font-size: 1.5rem;
+  margin: 0;
 }
 
 .login-button {
@@ -90,7 +91,7 @@ cite {
   font-weight: bold;
 }
 
-/* Centralização do botão */
+/* Centralização do botão Google */
 #buttonDiv {
   display: flex;
   justify-content: center;
@@ -146,10 +147,10 @@ footer {
     font-size: 0.9rem;
   }
 }
+
 .login-container {
   display: flex;
   justify-content: center;
   align-items: center;
   padding: 2rem;
 }
-
