--- a/home.css
+++ b/home.css
@@ -199,3 +199,10 @@ footer {
   }
 }
 
+main {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
